--- a/src/app/app.sass
+++ b/src/app/app.sass
@@ -19,6 +19,7 @@ $line-height: 3px
 $header-height: 90px
 
 .main-container
+  background-color: white
   position: absolute
   height: 100%
   width: 100%
@@ -26,13 +27,31 @@ $header-height: 90px
   flex-direction: row
   flex-wrap: nowrap
   .content
+    position: absolute
     height: 100%
-    width: calc(100% - 40px)
+    width: 100%
 .my-header
   height: $header-height
   width: 100%
-  background-color: #EBEBEB
+  // background-color: #EBEBEB
+  .close
+    position: absolute
+    height: 20px
+    width: 20px
+    top: 60px
+    right: 20px
+    transform: rotateZ(45deg)
+    animation: Open 1s
+    img
+      height: 20px
+      width: 20px
+    @keyframes Open
+      0%
+        transform: rotateZ(0deg)
+      100%
+        transform: rotateZ(45deg)
   .avatar
+    transition: 0.2s
     position: absolute
     height: 40px
     width: 40px
@@ -40,12 +59,20 @@ $header-height: 90px
     top: 40px
     border-radius: 50%
     margin-left: 10px
+    img
+      border-radius: 50%
 ion-nav
+  background-color: white
+  transition: 0.5s
   position: relative
-  margin-top:  $header-height
+  // margin-top:  $header-height
   height: calc(100% - #{ $header-height } - #{$bar-height})
-
+.left-opened
+  transform: translateX(60px)
+.left-active
+  transform: translateX(280px)
 .bottom-bar
+  transition: 0.5s
   position: absolute
   height: 50px
   background-color: white
