--- a/src/components/side-bar/side-bar.html
+++ b/src/components/side-bar/side-bar.html
@@ -1,2 +1,23 @@
-<div class="side-bar">
+<div class="side-bar" [ngClass]="[active ? 'active-menu':'', opened ? 'opened':'']">
+  <div class="shadow-click" [ngClass]="active ? 'disable':''" (click)="activate()"></div>
+  <div class="avatar">
+    <img [src]="'assets/avatars/ava-03.jpg'" alt="image">
+  </div>
+
+  <div class="background">
+    <div [ngClass]="[opened ? 'opened-icons': '', active ? 'activated-icons':'']" class="line-icons">
+      <div class="icon ic-01 image"></div>
+      <div class="icon ic-02 location"></div>
+      <div class="icon ic-03 palette"></div>
+      <div class="icon ic-04 outline"></div>
+      <div class="icon ic-05 folder"></div>
+      <div class="icon ic-06 settings"></div>
+    </div>
+
+    <div [ngClass]="[opened ? 'opened-icons': '', active ? 'activated-icons':'']"  class="bottom-icons">
+      <div class="icon ic-01 chema"></div>
+      <div class="icon ic-02 globus"></div>
+    </div>
+  </div>
+
 </div>
