--- a/src/app/app.sass
+++ b/src/app/app.sass
@@ -14,9 +14,23 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+@font-face
+  font-family: 'roboto-light'
+  src: url('../assets/fonts/Roboto-Light.ttf')
+@font-face
+  font-family: 'roboto-reg'
+  src: url('../assets/fonts/Roboto-Regular.ttf')
+@font-face
+  font-family: 'roboto-medium'
+  src: url('../assets/fonts/Roboto-Medium.ttf')
+@font-face
+  font-family: 'roboto-bold'
+  src: url('../assets/fonts/Roboto-Bold.ttf')
+
 $bar-height: 40px
 $line-height: 3px
-$header-height: 90px
+$header-height: 60px
 
 .main-container
   background-color: white
@@ -38,8 +52,8 @@ $header-height: 90px
     position: absolute
     height: 20px
     width: 20px
-    top: 60px
-    right: 20px
+    top: 15px
+    right: 10px
     transform: rotateZ(45deg)
     animation: Open 1s
     img
@@ -56,7 +70,8 @@ $header-height: 90px
     height: 40px
     width: 40px
     background-color: grey
-    top: 40px
+    top: 10px
+    background-color: grey
     border-radius: 50%
     margin-left: 10px
     img
