--- a/src/components/image/image.sass
+++ b/src/components/image/image.sass
@@ -20,7 +20,10 @@ image
       .album-img
         height: 60px
         width: 100%
-        background-color: grey
+        border-radius: 3px
+        background-color: #CCCCCC
+        background-size: cover
+        background-repeat: no-repeat
       .album-name
         font-family: 'roboto-medium'
         font-size: 14px
