--- a/src/components/image/image.sass
+++ b/src/components/image/image.sass
@@ -45,6 +45,9 @@ image
       // background-color: #EBEBEB
       &:nth-child(2n)
         margin-left: 10px
-    .img
-      background-color: grey
-      margin-top: 10px
+      .img
+        // background-color: grey
+        margin-top: 10px
+        img
+          width: 100%
+          height: auto
