--- a/src/components/side-bar/side-bar.sass
+++ b/src/components/side-bar/side-bar.sass
@@ -1,5 +1,9 @@
+$darkBackground: #2B2338
 side-bar
   background-color: #2B2338 !important
+  .darkMode
+    .background
+      background-color: $darkBackground !important
   .side-bar
     z-index: 2000
     height: 100%
@@ -112,7 +116,7 @@ side-bar
         transform: translateX(0px)
 
   .background
-    background-color: #2B2338 !important
+    background-color: #50AA98
     height: 100%
   .opened
     width: 60px
