--- a/src/components/location/location.html
+++ b/src/components/location/location.html
@@ -1,3 +1,4 @@
-<!-- Generated template for the LocationComponent component -->
+<div class="title-cont">{{vars[activeLang.code]['language-title']}}</div>
+
 <div #map id="map">
 </div>
