--- a/src/components/side-bar/side-bar.sass
+++ b/src/components/side-bar/side-bar.sass
@@ -91,8 +91,8 @@ side-bar
         span
           display: none
           color: white
-          padding-top: 14px
-          font-size: 14px
+          padding-top: 15px
+          font-size: 13px
     .activated-icons.line-icons, .activated-icons.bottom-icons
       flex-direction: row
       width: 250px
@@ -116,7 +116,8 @@ side-bar
         transform: translateX(0px)
 
   .background
-    background-color: #50AA98
+    // background-color: #50AA98
+    background-color: #6CC6BA
     height: 100%
   .opened
     width: 60px
