--- a/src/components/location/location.sass
+++ b/src/components/location/location.sass
@@ -1,5 +1,13 @@
 location
+  .title-cont
+    width: 100%
+    height: 20px
+    color: white
+    font-family: 'roboto-medium'
+    font-size: 16px
+    margin-top: 5px
   #map
-    height: calc(100% - 20px)
+    margin-top: 10px
+    height: calc(100% - 20px - 30px)
     width: 100%
     background-color: grey
