--- a/src/components/side-bar/side-bar.html
+++ b/src/components/side-bar/side-bar.html
@@ -1,10 +1,19 @@
 <div class="side-bar"
 [ngClass]="[active ? 'active-menu':'', opened ? 'opened':'', darkMode ? 'darkMode':'']">
   <div class="shadow-click" [ngClass]="active ? 'disable':''" (click)="activate()"></div>
-  <div class="avatar">
-    <img [src]="'assets/avatars/ava-03.jpg'" alt="image">
+  <div class="profile-info">
+     <div class="avatar">
+       <img [src]="'assets/avatars/ava-03.jpg'" alt="image">
+    </div>
+    <div [hidden]="!active" class="info-cont">
+      <div class="name">
+        <span>Dan Matveyw</span>
+      </div>
+      <div class="status">
+        <span>Some status</span>
+      </div>
+    </div>
   </div>
-
   <div class="background" >
     <div [ngClass]="[opened ? 'opened-icons': '', active ? 'activated-icons':'']" class="line-icons">
       <div [ngClass]="active && activeTab == 'image' ? 'active': ''"
