trying add emoji

--- a/src/components/side-bar/side-bar.html
+++ b/src/components/side-bar/side-bar.html
@@ -10,7 +10,7 @@
         <span>Dan Matveyw</span>
       </div>
       <div class="status">
-        <span>Some status</span>
+        <span>I love food 🍔🍔🍔 </span>
       </div>
     </div>
   </div>
