--- a/src/components/side-bar/side-bar.sass
+++ b/src/components/side-bar/side-bar.sass
@@ -2,7 +2,7 @@ $darkBackground: #2B2338
 side-bar
   background-color: #2B2338 !important
   .darkMode
-    .background
+    .background, .profile-info
       background-color: $darkBackground !important
   .side-bar
     z-index: 2000
@@ -20,6 +20,7 @@ side-bar
       height: 60px
       width: 100%
       display: flex
+      background-color: #6CC6BA
       .info-cont
         margin-top: 10px
         height: 50px
